[package]
name = "presiterm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
termimad = "0.8"
syntect = "4.1"
ron = "0.5"
figlet-rs = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
clap = "2.33"
termwiz = { path = "c:\\Users\\mib\\.tools\\src\\wezterm\\termwiz" }
filedescriptor = { version="0.8", path = "c:\\Users\\mib\\.tools\\src\\wezterm\\filedescriptor" }
image =  "*"